Fix font size on mobile

--- a/sources/platform-solutions/App.UI.Mvc5/Assets/stylesheet/app.css
+++ b/sources/platform-solutions/App.UI.Mvc5/Assets/stylesheet/app.css
@@ -9,7 +9,7 @@ html {
 	position: relative;
 	padding-top: 3.5rem;
 	min-height: 100%;
-	font-size: 14px;
+	font-size: 13px;
 }
 
 @media (min-width: 768px) {
